--- a/en.html
+++ b/en.html
@@ -5,7 +5,7 @@
   <div class="container mx-auto px-6 flex flex-col md:flex-row items-center">
     <div class="md:w-1/2 mb-4 md:mb-0 md:mt-8">
       <img
-        src="../images/playscreen.png"
+        src="images/playscreen.png"
         alt="App Preview"
         class="max-w-full h-auto rounded-lg"
       />
@@ -17,15 +17,15 @@
         class="flex flex-col md:flex-row justify-center md:justify-start items-center md:space-x-8 space-y-16 md:space-y-0"
       >
         <img
-          src="../images/icon.png"
+          src="images/icon.png"
           alt="체화 Icon"
           class="h-48 w-48 mt-8 md:mt-0"
         />
         <div class="flex flex-col space-y-8">
-          <h1 class="text-5xl font-semibold text-white">체화</h1>
+          <h1 class="text-5xl font-semibold text-white">CheHwa</h1>
 
           <p class="text-2xl text-white">
-            회독으로 확실하게 암기시켜 주는 스마트 단어장
+            A smart vocabulary app for sure memorization through repeated review
           </p>
         </div>
       </div>
@@ -34,13 +34,13 @@
       >
         <a href="#"
           ><img
-            src="../images/playstore.png"
+            src="images/playstore.png"
             alt="Get it on Google Play"
             class="h-16"
         /></a>
         <a href="#"
           ><img
-            src="../images/appstore.png"
+            src="images/appstore.png"
             alt="Download on the App Store"
             class="h-16"
         /></a>
@@ -61,72 +61,75 @@
     >
       <div class="text-center">
         <img
-          src="../svgs/wand-magic-sparkles.svg"
+          src="svgs/wand-magic-sparkles.svg"
           alt="Feature 1"
           class="h-16 w-16 mx-auto mb-6"
         />
-        <h3 class="text-2xl font-medium mb-2">전문가들이 선택한 단어장</h3>
+        <h3 class="text-2xl font-medium mb-2">
+          Vocabulary Lists Chosen by Experts
+        </h3>
         <p class="text-gray-600">
-          최고의 언어 시험 강사들이 선별한 단어장으로 언어 시험에 대비할 수
-          있습니다.
+          Prepare for language exams with vocabulary lists curated by top
+          language test instructors.
         </p>
       </div>
       <div class="text-center">
         <img
-          src="../svgs/mobile-screen.svg"
+          src="svgs/mobile-screen.svg"
           alt="Feature 2"
           class="h-16 w-16 mx-auto mb-6"
         />
-        <h3 class="text-2xl font-medium mb-2">스마트 회독 기능</h3>
+        <h3 class="text-2xl font-medium mb-2">Smart Review Feature</h3>
         <p class="text-gray-600">
-          스마트 회독 알고리즘으로 효율적인 학습과 이해를 돕습니다.
+          Our smart review algorithm helps with efficient learning and
+          understanding.
         </p>
       </div>
       <div class="text-center">
         <img
-          src="../svgs/list.svg"
+          src="svgs/list.svg"
           alt="Feature 3"
           class="h-16 w-16 mx-auto mb-6"
         />
-        <h3 class="text-2xl font-medium mb-2">맞춤형 단어 리스트</h3>
+        <h3 class="text-2xl font-medium mb-2">Customized Word Lists</h3>
         <p class="text-gray-600">
-          시험과 난이도에 따라 사용자의 학습 수준에 맞는 단어 리스트를
-          제공합니다.
+          We provide word lists tailored to the user's learning level based on
+          exams and difficulty.
         </p>
       </div>
       <div class="text-center">
         <img
-          src="../svgs/circle-play.svg"
+          src="svgs/circle-play.svg"
           alt="Feature 3"
           class="h-16 w-16 mx-auto mb-6"
         />
-        <h3 class="text-2xl font-medium mb-2">풍부한 멀티미디어 콘텐츠</h3>
+        <h3 class="text-2xl font-medium mb-2">Rich Multimedia Content</h3>
         <p class="text-gray-600">
-          발음, 예문, 시각 자료 등 풍부한 콘텐츠로 단어를 더욱 쉽게 이해하고
-          기억할 수 있습니다.
+          Understand and remember words more easily with rich content including
+          pronunciation, example sentences, and visual aids.
         </p>
       </div>
       <div class="text-center">
         <img
-          src="../svgs/person-arrow-up-from-line.svg"
+          src="svgs/person-arrow-up-from-line.svg"
           alt="Feature 3"
           class="h-16 w-16 mx-auto mb-6"
         />
-        <h3 class="text-2xl font-medium mb-2">데일리 단어 챌린지</h3>
+        <h3 class="text-2xl font-medium mb-2">Daily Word Challenge</h3>
         <p class="text-gray-600">
-          매일 새로운 단어를 제공하여 사용자의 학습 의욕을 유지합니다.
+          Maintain users' learning motivation by providing new words every day.
         </p>
       </div>
       <div class="text-center">
         <img
-          src="../svgs/circle-arrow-down.svg"
+          src="svgs/circle-arrow-down.svg"
           alt="Feature 3"
           class="h-16 w-16 mx-auto mb-6"
         />
-        <h3 class="text-2xl font-medium mb-2">학습 결과 분석</h3>
+        <h3 class="text-2xl font-medium mb-2">Learning Results Analysis</h3>
         <p class="text-gray-600">
-          학습 결과를 추척하여 세부적인 분석을 제공합니다. 학습 결과를
-          모니터링하고 학습 방향을 조정할 수 있습니다.
+          Track learning results to provide detailed analysis. Monitor learning
+          outcomes and adjust learning direction.
         </p>
       </div>
     </div>
@@ -137,17 +140,13 @@
   <div class="container mx-auto px-6 text-center">
     <h2 class="text-3xl md:text-5xl font-semibold mb-8">Contact Us</h2>
     <p class="text-xl md:text-2xl mb-24">
-      아래 메일로 문의 주시면 빠른 시일 내에 답변드리겠습니다.
+      We would appreciate if you could send inquiries to the email below
     </p>
     <a
       href="mailto:contact@chehwa.com"
       class="inline-block px-6 py-12 lg:px-72 lg:py-36 md:px-36 md:py-18 border-soild border-2 border-gray-200"
     >
-      <img
-        src="../svgs/envelope.svg"
-        alt="Email"
-        class="h-24 w-24 mx-auto mb-4"
-      />
+      <img src="svgs/envelope.svg" alt="Email" class="h-24 w-24 mx-auto mb-4" />
       <span class="text-lg md:text-2xl text-blue-600 hover:underline"
         >contact@chehwa.com</span
       >
