--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         class="container mx-auto px-6 py-0 flex justify-between items-center"
       >
         <div class="flex items-center">
-          <img src="../images/icon.png" alt="체화 Icon" class="h-16 mr-4" />
+          <img src="images/icon.png" alt="체화 Icon" class="h-16 mr-4" />
           <span class="text-3xl font-semibold hidden md:inline-block"
             >체화</span
           >
