--- a/ko.html
+++ b/ko.html
@@ -67,8 +67,7 @@
         />
         <h3 class="text-2xl font-medium mb-2">전문가들이 선택한 단어장</h3>
         <p class="text-gray-600">
-          최고의 언어 시험 강사들이 선별한 단어장으로 언어 시험에 대비할 수
-          있습니다.
+          전문 강사들이 추천한 단어 리스트로 최고의 학습 효과를 제공합니다.
         </p>
       </div>
       <div class="text-center">
@@ -77,9 +76,10 @@
           alt="Feature 2"
           class="h-16 w-16 mx-auto mb-6"
         />
-        <h3 class="text-2xl font-medium mb-2">스마트 회독 기능</h3>
+        <h3 class="text-2xl font-medium mb-2">메타인지 스마트 회독 기능</h3>
         <p class="text-gray-600">
-          스마트 회독 알고리즘으로 효율적인 학습과 이해를 돕습니다.
+          메타인지를 활용한 스마트 회독 알고리즘으로 효율적인 학습과 이해를
+          돕습니다.
         </p>
       </div>
       <div class="text-center">
