--- a/en.html
+++ b/en.html
@@ -1,7 +1,4 @@
-<header
-  id="home"
-  class="pt-48 pb-36 bg-gradient-to-r from-orange-400 to-red-500"
->
+<header id="home" class="pt-48 pb-36">
   <div class="container mx-auto px-6 flex flex-col md:flex-row items-center">
     <div class="md:w-1/2 mb-4 md:mb-0 md:mt-8">
       <img
@@ -19,7 +16,7 @@
         <img
           src="images/icon.png"
           alt="체화 Icon"
-          class="h-48 w-48 mt-8 md:mt-0"
+          class="h-48 w-48 mt-24 md:mt-0"
         />
         <div class="flex flex-col space-y-8">
           <h1 class="text-5xl font-semibold text-white">CheHwa</h1>
