--- a/index.html
+++ b/index.html
@@ -33,9 +33,18 @@
         font-weight: 200;
         scrollbar-width: smooth;
       }
+      #home {
+        background-image: linear-gradient(
+          to right,
+          #f78ca0 0%,
+          #f9748f 19%,
+          #fd868c 60%,
+          #fe9a8b 100%
+        );
+      }
       @media screen and (min-width: 1920px) {
         body {
-          font-size: 20px;
+          font-size: 18px;
         }
       }
     </style>
@@ -43,13 +52,11 @@
   <body class="bg-gray-100">
     <nav class="bg-white shadow-md fixed w-full py-4 z-10">
       <div
-        class="container mx-auto px-6 py-0 flex justify-between items-center"
+        class="container mx-auto px-6 py-1 flex justify-between items-center"
       >
         <div class="flex items-center">
-          <img src="images/icon.png" alt="체화 Icon" class="h-16 mr-4" />
-          <span class="text-3xl font-semibold hidden md:inline-block"
-            >체화</span
-          >
+          <img src="images/icon.png" alt="체화 Icon" class="h-12 mr-4" />
+          <span class="text-2xl font-normal hidden md:inline-block">체화</span>
         </div>
         <div class="hidden md:flex items-center space-x-6">
           <a href="#home" class="hover:text-orange-500">Home</a>
@@ -95,13 +102,13 @@
         </div>
       </div>
       <div id="mobile-menu" class="hidden md:hidden bg-white shadow-md">
-        <a href="#home" class="block py-2 px-4 text-sm hover:bg-gray-200"
+        <a href="#home" class="block mt-2 py-4 px-4 text-sm hover:bg-gray-200"
           >Home</a
         >
-        <a href="#features" class="block py-2 px-4 text-sm hover:bg-gray-200"
+        <a href="#features" class="block py-4 px-4 text-sm hover:bg-gray-200"
           >Features</a
         >
-        <a href="#contact" class="block py-2 px-4 text-sm hover:bg-gray-200"
+        <a href="#contact" class="block py-4 px-4 text-sm hover:bg-gray-200"
           >Contact</a
         >
         <div class="flex justify-start px-4 py-2 space-x-2">
