--- a/en.html
+++ b/en.html
@@ -1,152 +1,198 @@
 <header id="home" class="pt-48 pb-36">
-  <div class="container mx-auto px-6 flex flex-col md:flex-row items-center">
-    <div class="md:w-1/2 mb-4 md:mb-0 md:mt-8">
-      <img
-        src="images/playscreen.png"
-        alt="App Preview"
-        class="max-w-full h-auto rounded-lg"
-      />
-    </div>
-    <div
-      class="md:w-1/2 md:pl-12 text-center md:text-left space-y-16 lg:space-y-32"
-    >
-      <div
-        class="flex flex-col md:flex-row justify-center md:justify-start items-center md:space-x-8 space-y-16 md:space-y-0"
-      >
+  <div class="max-w-screen-lg lg:max-w-screen-xl mx-auto">
+    <div class="container mx-auto flex flex-col lg:flex-row items-center">
+      <div class="lg:w-1/2 mb-4 lg:mb-0 lg:mt-8">
         <img
-          src="images/icon.png"
-          alt="체화 Icon"
-          class="h-48 w-48 mt-24 md:mt-0"
+          src="images/playscreen.png"
+          alt="App Preview"
+          class="max-w-full h-auto rounded-lg"
         />
-        <div class="flex flex-col space-y-8">
-          <h1 class="text-5xl font-semibold text-white">CheHwa</h1>
-
-          <p class="text-2xl text-white">
-            A smart vocabulary app for sure memorization through repeated review
-          </p>
-        </div>
       </div>
-      <div
-        class="flex flex-col lg:flex-row justify-center lg:justify-start items-center lg:items-start gap-8"
-      >
-        <a href="#"
-          ><img
-            src="images/playstore.png"
-            alt="Get it on Google Play"
-            class="h-16"
-        /></a>
-        <a href="#"
-          ><img
-            src="images/appstore.png"
-            alt="Download on the App Store"
-            class="h-16"
-        /></a>
+      <div class="lg:w-1/2 text-center lg:text-left space-y-16 lg:space-y-48">
+        <div
+          class="flex flex-col lg:flex-row justify-between lg:justify-start items-center space-y-16 lg:space-y-0"
+        >
+          <img
+            src="images/icon.png"
+            alt="Chehwa Icon"
+            class="h-36 w-36 mt-24 lg:mt-0 lg:h-48 lg:w-48"
+          />
+          <div class="flex flex-col space-y-8 lg:ml-8">
+            <h1 class="text-3xl xl:text-6xl font-semibold text-white">
+              Chehwa
+            </h1>
+
+            <p class="text-xl xl:text-3xl mx-4 lg:mx-0 text-white">
+              Smart vocabulary app for efficient memorization through multiple
+              reviews
+            </p>
+          </div>
+        </div>
+        <div
+          class="flex flex-col lg:flex-row justify-center lg:justify-start items-center lg:items-start gap-8"
+        >
+          <a href="#"
+            ><img
+              src="images/playstore.png"
+              alt="Get it on Google Play"
+              class="h-16 md:h-24"
+          /></a>
+          <a href="#"
+            ><img
+              src="images/appstore.png"
+              alt="Download on the App Store"
+              class="h-16 md:h-24"
+          /></a>
+        </div>
       </div>
     </div>
   </div>
 </header>
 
-<main id="features" class="py-24 lg:py-48 bg-white">
-  <div class="container mx-auto px-6">
-    <h2
-      class="text-3xl lg:text-5xl font-semibold text-center mb-12 md:mb-24 lg:mb-32"
-    >
-      App Features
-    </h2>
+<main>
+  <section id="about" class="py-24 lg:py-48">
     <div
-      class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 md:gap-16 lg:gap-24"
+      class="max-w-screen-lg lg:max-w-screen-xl mx-auto px-4 md:px-6 lg:px-8"
     >
-      <div class="text-center">
-        <img
-          src="svgs/wand-magic-sparkles.svg"
-          alt="Feature 1"
-          class="h-16 w-16 mx-auto mb-6"
-        />
-        <h3 class="text-2xl font-medium mb-2">
-          Vocabulary Lists Chosen by Experts
-        </h3>
-        <p class="text-gray-600">
-          Prepare for language exams with vocabulary lists curated by top
-          language test instructors.
-        </p>
-      </div>
-      <div class="text-center">
-        <img
-          src="svgs/mobile-screen.svg"
-          alt="Feature 2"
-          class="h-16 w-16 mx-auto mb-6"
-        />
-        <h3 class="text-2xl font-medium mb-2">Smart Review Feature</h3>
-        <p class="text-gray-600">
-          Our smart review algorithm helps with efficient learning and
-          understanding.
-        </p>
-      </div>
-      <div class="text-center">
-        <img
-          src="svgs/list.svg"
-          alt="Feature 3"
-          class="h-16 w-16 mx-auto mb-6"
-        />
-        <h3 class="text-2xl font-medium mb-2">Customized Word Lists</h3>
-        <p class="text-gray-600">
-          We provide word lists tailored to the user's learning level based on
-          exams and difficulty.
-        </p>
-      </div>
-      <div class="text-center">
-        <img
-          src="svgs/circle-play.svg"
-          alt="Feature 3"
-          class="h-16 w-16 mx-auto mb-6"
-        />
-        <h3 class="text-2xl font-medium mb-2">Rich Multimedia Content</h3>
-        <p class="text-gray-600">
-          Understand and remember words more easily with rich content including
-          pronunciation, example sentences, and visual aids.
-        </p>
-      </div>
-      <div class="text-center">
-        <img
-          src="svgs/person-arrow-up-from-line.svg"
-          alt="Feature 3"
-          class="h-16 w-16 mx-auto mb-6"
-        />
-        <h3 class="text-2xl font-medium mb-2">Daily Word Challenge</h3>
-        <p class="text-gray-600">
-          Maintain users' learning motivation by providing new words every day.
-        </p>
-      </div>
-      <div class="text-center">
-        <img
-          src="svgs/circle-arrow-down.svg"
-          alt="Feature 3"
-          class="h-16 w-16 mx-auto mb-6"
-        />
-        <h3 class="text-2xl font-medium mb-2">Learning Results Analysis</h3>
-        <p class="text-gray-600">
-          Track learning results to provide detailed analysis. Monitor learning
-          outcomes and adjust learning direction.
-        </p>
+      <div class="grid grid-cols-1 md:grid-cols-2 gap-8 md:gap-12 lg:gap-16">
+        <div
+          class="flex flex-col justify-center items-center md:items-start space-y-16"
+        >
+          <h2
+            class="text-2xl md:text-3xl lg:text-4xl font-semibold tracking-tighter leading-tight"
+          >
+            Scientific Review Algorithm
+          </h2>
+          <p class="text-base md:text-lg lg:text-xl text-gray-600 leading-10">
+            Learning cycles are set based on Ebbinghaus's forgetting curve
+            theory.<br />After the initial learning, you review a chapter in the
+            order of 6 hours, 12 hours, 1 day, 2 days, 4 days, 1 week, and 2
+            weeks, ensuring it's converted into long-term memory.
+          </p>
+        </div>
+        <div class="w-full h-96 flex justify-center items-center">
+          <canvas id="forgettingCurve" class="w-full"></canvas>
+        </div>
       </div>
     </div>
-  </div>
+  </section>
+  <section id="features" class="py-24 lg:py-36 bg-white">
+    <div class="max-w-screen-lg lg:max-w-screen-xl mx-auto">
+      <div class="container mx-auto px-6">
+        <h2
+          class="text-3xl lg:text-5xl font-semibold text-center tracking-tighter mb-12 md:mb-24 lg:mb-32"
+        >
+          More Features
+        </h2>
+        <div
+          class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 md:gap-16 lg:gap-24"
+        >
+          <div class="text-center">
+            <img
+              src="svgs/wand-magic-sparkles.svg"
+              alt="Feature 1"
+              class="h-16 w-16 mx-auto mb-6"
+            />
+            <h3 class="text-2xl font-semibold mb-2">
+              Expert-curated Vocabulary Lists
+            </h3>
+            <p class="text-xl text-gray-600">
+              We provide the best learning experience with word lists
+              recommended by professional instructors.
+            </p>
+          </div>
+          <div class="text-center">
+            <img
+              src="svgs/mobile-screen.svg"
+              alt="Feature 2"
+              class="h-16 w-16 mx-auto mb-6"
+            />
+            <h3 class="text-2xl font-semibold mb-2">
+              Easy Learning Experience
+            </h3>
+            <p class="text-xl text-gray-600">
+              You can easily experience multiple reviews with a maximum of 5
+              repetitions when learning one part.
+            </p>
+          </div>
+          <div class="text-center">
+            <img
+              src="svgs/list.svg"
+              alt="Feature 3"
+              class="h-16 w-16 mx-auto mb-6"
+            />
+            <h3 class="text-2xl font-semibold mb-2">Customized Word Lists</h3>
+            <p class="text-xl text-gray-600">
+              We provide word lists tailored to the user's learning level based
+              on exams and difficulty.
+            </p>
+          </div>
+          <div class="text-center">
+            <img
+              src="svgs/circle-play.svg"
+              alt="Feature 3"
+              class="h-16 w-16 mx-auto mb-6"
+            />
+            <h3 class="text-2xl font-semibold mb-2">Rich Multimedia Content</h3>
+            <p class="text-xl text-gray-600">
+              With rich content such as pronunciations, example sentences, and
+              visual aids, you can understand and remember words more easily.
+            </p>
+          </div>
+          <div class="text-center">
+            <img
+              src="svgs/person-arrow-up-from-line.svg"
+              alt="Feature 3"
+              class="h-16 w-16 mx-auto mb-6"
+            />
+            <h3 class="text-2xl font-semibold mb-2">Improved Metacognition</h3>
+            <p class="text-xl text-gray-600">
+              We assess with a simple test to distinguish words you know for
+              sure.
+            </p>
+          </div>
+          <div class="text-center">
+            <img
+              src="svgs/circle-arrow-down.svg"
+              alt="Feature 3"
+              class="h-16 w-16 mx-auto mb-6"
+            />
+            <h3 class="text-2xl font-semibold mb-2">
+              Learning Result Analysis
+            </h3>
+            <p class="text-xl text-gray-600">
+              We track learning results and provide detailed analysis. You can
+              monitor your learning results and adjust your learning direction.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 </main>
 
-<section id="contact" class="py-24 lg:py-48 bg-gray-100">
-  <div class="container mx-auto px-6 text-center">
-    <h2 class="text-3xl md:text-5xl font-semibold mb-8">Contact Us</h2>
-    <p class="text-xl md:text-2xl mb-24">
-      We would appreciate if you could send inquiries to the email below
-    </p>
-    <a
-      href="mailto:contact@chehwa.com"
-      class="inline-block px-6 py-12 lg:px-72 lg:py-36 md:px-36 md:py-18 border-soild border-2 border-gray-200"
-    >
-      <img src="svgs/envelope.svg" alt="Email" class="h-24 w-24 mx-auto mb-4" />
-      <span class="text-lg md:text-2xl text-blue-600 hover:underline"
-        >contact@chehwa.com</span
+<section id="contact" class="py-24 lg:py-36 bg-gray-100">
+  <div class="max-w-screen-lg lg:max-w-screen-xl mx-auto">
+    <div class="container mx-auto px-6 text-center">
+      <h2 class="text-3xl md:text-5xl font-semibold tracking-tighter mb-8">
+        Contact Us
+      </h2>
+      <p class="text-xl md:text-2xl mb-24">
+        We will respond to your inquiry as soon as possible via the email below.
+      </p>
+      <a
+        href="mailto:contact@chehwa.com"
+        class="inline-block px-6 py-12 md:px-36 md:py-18 lg:px-72 lg:py-36 boder-none border-soild md:border-2 border-gray-300"
       >
-    </a>
+        <img
+          src="svgs/envelope.svg"
+          alt="Email"
+          class="h-24 w-24 mx-auto mb-4"
+        />
+        <span class="text-lg md:text-2xl text-blue-600 hover:underline"
+          >contact@chehwa.com</span
+        >
+      </a>
+    </div>
   </div>
 </section>
