--- a/ko.html
+++ b/ko.html
@@ -1,149 +1,190 @@
 <header id="home" class="pt-48 pb-36">
-  <div class="container mx-auto px-6 flex flex-col md:flex-row items-center">
-    <div class="md:w-1/2 mb-4 md:mb-0 md:mt-8">
-      <img
-        src="images/playscreen.png"
-        alt="App Preview"
-        class="max-w-full h-auto rounded-lg"
-      />
-    </div>
-    <div
-      class="md:w-1/2 md:pl-12 text-center md:text-left space-y-16 lg:space-y-32"
-    >
-      <div
-        class="flex flex-col md:flex-row justify-center md:justify-start items-center md:space-x-8 space-y-16 md:space-y-0"
-      >
+  <div class="max-w-screen-lg lg:max-w-screen-xl mx-auto">
+    <div class="container mx-auto flex flex-col lg:flex-row items-center">
+      <div class="lg:w-1/2 mb-4 lg:mb-0 lg:mt-8">
         <img
-          src="images/icon.png"
-          alt="체화 Icon"
-          class="h-48 w-48 mt-24 md:mt-0"
+          src="images/playscreen.png"
+          alt="App Preview"
+          class="max-w-full h-auto rounded-lg"
         />
-        <div class="flex flex-col space-y-8">
-          <h1 class="text-5xl font-semibold text-white">체화</h1>
-
-          <p class="text-2xl text-white">
-            회독으로 확실하게 암기시켜 주는 스마트 단어장
-          </p>
-        </div>
       </div>
-      <div
-        class="flex flex-col lg:flex-row justify-center lg:justify-start items-center lg:items-start gap-8"
-      >
-        <a href="#"
-          ><img
-            src="images/playstore.png"
-            alt="Get it on Google Play"
-            class="h-16"
-        /></a>
-        <a href="#"
-          ><img
-            src="images/appstore.png"
-            alt="Download on the App Store"
-            class="h-16"
-        /></a>
+      <div class="lg:w-1/2 text-center lg:text-left space-y-16 lg:space-y-48">
+        <div
+          class="flex flex-col lg:flex-row justify-between lg:justify-start items-center space-y-16 lg:space-y-0"
+        >
+          <img
+            src="images/icon.png"
+            alt="체화 Icon"
+            class="h-36 w-36 mt-24 lg:mt-0 lg:h-48 lg:w-48"
+          />
+          <div class="flex flex-col space-y-8 lg:ml-8">
+            <h1 class="text-3xl xl:text-6xl font-semibold text-white">체화</h1>
+
+            <p class="text-xl xl:text-3xl mx-4 lg:mx-0 text-white">
+              다회독을 통해 효율적으로 암기하는 스마트 단어장
+            </p>
+          </div>
+        </div>
+        <div
+          class="flex flex-col lg:flex-row justify-center lg:justify-start items-center lg:items-start gap-8"
+        >
+          <a href="#"
+            ><img
+              src="images/playstore.png"
+              alt="Get it on Google Play"
+              class="h-16 md:h-24"
+          /></a>
+          <a href="#"
+            ><img
+              src="images/appstore.png"
+              alt="Download on the App Store"
+              class="h-16 md:h-24"
+          /></a>
+        </div>
       </div>
     </div>
   </div>
 </header>
 
-<main id="features" class="py-24 lg:py-48 bg-white">
-  <div class="container mx-auto px-6">
-    <h2
-      class="text-3xl lg:text-5xl font-semibold text-center mb-12 md:mb-24 lg:mb-32"
-    >
-      App Features
-    </h2>
+<main>
+  <section id="about" class="py-24 lg:py-48">
     <div
-      class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 md:gap-16 lg:gap-24"
+      class="max-w-screen-lg lg:max-w-screen-xl mx-auto px-4 md:px-6 lg:px-8"
     >
-      <div class="text-center">
-        <img
-          src="svgs/wand-magic-sparkles.svg"
-          alt="Feature 1"
-          class="h-16 w-16 mx-auto mb-6"
-        />
-        <h3 class="text-2xl font-medium mb-2">전문가들이 선택한 단어장</h3>
-        <p class="text-gray-600">
-          전문 강사들이 추천한 단어 리스트로 최고의 학습 효과를 제공합니다.
-        </p>
-      </div>
-      <div class="text-center">
-        <img
-          src="svgs/mobile-screen.svg"
-          alt="Feature 2"
-          class="h-16 w-16 mx-auto mb-6"
-        />
-        <h3 class="text-2xl font-medium mb-2">메타인지 스마트 회독 기능</h3>
-        <p class="text-gray-600">
-          메타인지를 활용한 스마트 회독 알고리즘으로 효율적인 학습과 이해를
-          돕습니다.
-        </p>
-      </div>
-      <div class="text-center">
-        <img
-          src="svgs/list.svg"
-          alt="Feature 3"
-          class="h-16 w-16 mx-auto mb-6"
-        />
-        <h3 class="text-2xl font-medium mb-2">맞춤형 단어 리스트</h3>
-        <p class="text-gray-600">
-          시험과 난이도에 따라 사용자의 학습 수준에 맞는 단어 리스트를
-          제공합니다.
-        </p>
-      </div>
-      <div class="text-center">
-        <img
-          src="svgs/circle-play.svg"
-          alt="Feature 3"
-          class="h-16 w-16 mx-auto mb-6"
-        />
-        <h3 class="text-2xl font-medium mb-2">풍부한 멀티미디어 콘텐츠</h3>
-        <p class="text-gray-600">
-          발음, 예문, 시각 자료 등 풍부한 콘텐츠로 단어를 더욱 쉽게 이해하고
-          기억할 수 있습니다.
-        </p>
-      </div>
-      <div class="text-center">
-        <img
-          src="svgs/person-arrow-up-from-line.svg"
-          alt="Feature 3"
-          class="h-16 w-16 mx-auto mb-6"
-        />
-        <h3 class="text-2xl font-medium mb-2">데일리 단어 챌린지</h3>
-        <p class="text-gray-600">
-          매일 새로운 단어를 제공하여 사용자의 학습 의욕을 유지합니다.
-        </p>
-      </div>
-      <div class="text-center">
-        <img
-          src="svgs/circle-arrow-down.svg"
-          alt="Feature 3"
-          class="h-16 w-16 mx-auto mb-6"
-        />
-        <h3 class="text-2xl font-medium mb-2">학습 결과 분석</h3>
-        <p class="text-gray-600">
-          학습 결과를 추척하여 세부적인 분석을 제공합니다. 학습 결과를
-          모니터링하고 학습 방향을 조정할 수 있습니다.
-        </p>
+      <div class="grid grid-cols-1 md:grid-cols-2 gap-8 md:gap-12 lg:gap-16">
+        <div
+          class="flex flex-col justify-center items-center md:items-start space-y-16"
+        >
+          <h2
+            class="text-2xl md:text-3xl lg:text-4xl font-semibold tracking-tighter leading-tight"
+          >
+            과학적인 회독 알고리즘
+          </h2>
+          <p class="text-base md:text-lg lg:text-xl text-gray-600 leading-10">
+            에빙하우스의 망각 곡선 이론을 바탕으로 학습 주기를 설정합니다.<br />최초
+            학습 후 6시간, 12시간, 1일, 2일, 4일, 1주일, 2주일 순으로 한 챕터를
+            회독하며 확실하게 장기 기억으로 변환시킵니다.
+          </p>
+        </div>
+        <div class="w-full h-96 flex justify-center items-center">
+          <canvas id="forgettingCurve" class="w-full"></canvas>
+        </div>
       </div>
     </div>
-  </div>
+  </section>
+  <section id="features" class="py-24 lg:py-36 bg-white">
+    <div class="max-w-screen-lg lg:max-w-screen-xl mx-auto">
+      <div class="container mx-auto px-6">
+        <h2
+          class="text-3xl lg:text-5xl font-semibold text-center tracking-tighter mb-12 md:mb-24 lg:mb-32"
+        >
+          More Features
+        </h2>
+        <div
+          class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 md:gap-16 lg:gap-24"
+        >
+          <div class="text-center">
+            <img
+              src="svgs/wand-magic-sparkles.svg"
+              alt="Feature 1"
+              class="h-16 w-16 mx-auto mb-6"
+            />
+            <h3 class="text-2xl font-semibold mb-2">
+              전문가들이 선택한 단어장
+            </h3>
+            <p class="text-xl text-gray-600">
+              전문 강사들이 추천한 단어 리스트로 최고의 학습 효과를 제공합니다.
+            </p>
+          </div>
+          <div class="text-center">
+            <img
+              src="svgs/mobile-screen.svg"
+              alt="Feature 2"
+              class="h-16 w-16 mx-auto mb-6"
+            />
+            <h3 class="text-2xl font-semibold mb-2">손쉬운 학습 경험</h3>
+            <p class="text-xl text-gray-600">
+              한 파트를 학습할 때 최대 5회독으로 손쉽게 회독을 경험할 수
+              있습니다.
+            </p>
+          </div>
+          <div class="text-center">
+            <img
+              src="svgs/list.svg"
+              alt="Feature 3"
+              class="h-16 w-16 mx-auto mb-6"
+            />
+            <h3 class="text-2xl font-semibold mb-2">맞춤형 단어 리스트</h3>
+            <p class="text-xl text-gray-600">
+              시험과 난이도에 따라 사용자의 학습 수준에 맞는 단어 리스트를
+              제공합니다.
+            </p>
+          </div>
+          <div class="text-center">
+            <img
+              src="svgs/circle-play.svg"
+              alt="Feature 3"
+              class="h-16 w-16 mx-auto mb-6"
+            />
+            <h3 class="text-2xl font-semibold mb-2">
+              풍부한 멀티미디어 콘텐츠
+            </h3>
+            <p class="text-xl text-gray-600">
+              발음, 예문, 시각 자료 등 풍부한 콘텐츠로 단어를 더욱 쉽게 이해하고
+              기억할 수 있습니다.
+            </p>
+          </div>
+          <div class="text-center">
+            <img
+              src="svgs/person-arrow-up-from-line.svg"
+              alt="Feature 3"
+              class="h-16 w-16 mx-auto mb-6"
+            />
+            <h3 class="text-2xl font-semibold mb-2">메타인지 향상</h3>
+            <p class="text-xl text-gray-600">
+              확실하게 아는 단어를 구분하기 위해 간단한 시험으로 평가합니다.
+            </p>
+          </div>
+          <div class="text-center">
+            <img
+              src="svgs/circle-arrow-down.svg"
+              alt="Feature 3"
+              class="h-16 w-16 mx-auto mb-6"
+            />
+            <h3 class="text-2xl font-semibold mb-2">학습 결과 분석</h3>
+            <p class="text-xl text-gray-600">
+              학습 결과를 추척하여 세부적인 분석을 제공합니다. 학습 결과를
+              모니터링하고 학습 방향을 조정할 수 있습니다.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 </main>
 
-<section id="contact" class="py-24 lg:py-48 bg-gray-100">
-  <div class="container mx-auto px-6 text-center">
-    <h2 class="text-3xl md:text-5xl font-semibold mb-8">Contact Us</h2>
-    <p class="text-xl md:text-2xl mb-24">
-      아래 메일로 문의 주시면 빠른 시일 내에 답변드리겠습니다.
-    </p>
-    <a
-      href="mailto:contact@chehwa.com"
-      class="inline-block px-6 py-12 lg:px-72 lg:py-36 md:px-36 md:py-18 border-soild border-2 border-gray-200"
-    >
-      <img src="svgs/envelope.svg" alt="Email" class="h-24 w-24 mx-auto mb-4" />
-      <span class="text-lg md:text-2xl text-blue-600 hover:underline"
-        >contact@chehwa.com</span
+<section id="contact" class="py-24 lg:py-36 bg-gray-100">
+  <div class="max-w-screen-lg lg:max-w-screen-xl mx-auto">
+    <div class="container mx-auto px-6 text-center">
+      <h2 class="text-3xl md:text-5xl font-semibold tracking-tighter mb-8">
+        Contact Us
+      </h2>
+      <p class="text-xl md:text-2xl mb-24">
+        아래 메일로 문의 주시면 빠른 시일 내에 답변드리겠습니다.
+      </p>
+      <a
+        href="mailto:contact@chehwa.com"
+        class="inline-block px-6 py-12 md:px-36 md:py-18 lg:px-72 lg:py-36 boder-none border-soild md:border-2 border-gray-300"
       >
-    </a>
+        <img
+          src="svgs/envelope.svg"
+          alt="Email"
+          class="h-24 w-24 mx-auto mb-4"
+        />
+        <span class="text-lg md:text-2xl text-blue-600 hover:underline"
+          >contact@chehwa.com</span
+        >
+      </a>
+    </div>
   </div>
 </section>
