--- a/en.html
+++ b/en.html
@@ -70,7 +70,10 @@
             weeks, ensuring it's converted into long-term memory.
           </p>
         </div>
-        <div class="w-full h-96 flex justify-center items-center">
+        <div
+          id="chart-container"
+          class="w-full h-96 flex justify-center items-center"
+        >
           <canvas id="forgettingCurve" class="w-full"></canvas>
         </div>
       </div>
