--- a/ko.html
+++ b/ko.html
@@ -66,8 +66,11 @@
             회독하며 확실하게 장기 기억으로 변환시킵니다.
           </p>
         </div>
-        <div class="w-full h-96 flex justify-center items-center">
-          <canvas id="forgettingCurve" class="w-full"></canvas>
+        <div
+          id="chart-container"
+          class="w-full h-96 flex justify-center items-center"
+        >
+          <canvas id="forgettingCurve" w="2000" height="1200"></canvas>
         </div>
       </div>
     </div>
