--- a/en.html
+++ b/en.html
@@ -1,5 +1,6 @@
 <header id="home" class="pt-48 pb-36">
-  <div class="max-w-screen-lg lg:max-w-screen-xl mx-auto">
+  <div class="absolute inset-0 -z-3 bg-gray-700"></div>
+  <div class="relative max-w-screen-lg lg:max-w-screen-xl mx-auto">
     <div class="container mx-auto flex flex-col lg:flex-row items-center">
       <div class="lg:w-1/2 mb-4 lg:mb-0 lg:mt-8">
         <img
