--- a/ko.html
+++ b/ko.html
@@ -1,12 +1,6 @@
 <header id="home" class="pt-48 pb-36">
-  <div class="absolute inset-0 -z-3 bg-black/[0.5]"></div>
-  <div class="absolute inset-0 -z-5 bg-gradient-to-t from-gray-400/50"></div>
-  <img
-    src="./images/tea-time-3240766_1920.jpg"
-    alt="Background Image"
-    class="absolute inset-0 w-full h-full object-cover -z-10"
-  />
-  <div class="relative max-w-screen-lg lg:max-w-screen-xl mx-auto z-10">
+  <div class="absolute inset-0 -z-3 bg-gray-700"></div>
+  <div class="relative max-w-screen-lg lg:max-w-screen-xl mx-auto">
     <div class="container mx-auto flex flex-col lg:flex-row items-center">
       <div class="lg:w-1/2 mb-4 lg:mb-0 lg:mt-8">
         <img
