--- a/en.html
+++ b/en.html
@@ -185,7 +185,7 @@
         We will respond to your inquiry as soon as possible via the email below.
       </p>
       <a
-        href="mailto:contact@chehwa.com"
+        href="mailto:chehwa62@gmail.com"
         class="inline-block px-6 py-12 md:px-36 md:py-18 lg:px-72 lg:py-36 boder-none border-soild md:border-2 border-gray-300"
       >
         <img
@@ -194,7 +194,7 @@
           class="h-24 w-24 mx-auto mb-4"
         />
         <span class="text-lg md:text-2xl text-blue-600 hover:underline"
-          >contact@chehwa.com</span
+          >chehwa62@gmail.com</span
         >
       </a>
     </div>
