--- a/ko.html
+++ b/ko.html
@@ -1,5 +1,5 @@
-<header id="home" class="pt-48 pb-36 bg-white">
-  <div class="absolute inset-0 -z-3 bg-gray-700 h-1/2"></div>
+<header id="home" class="pt-48 pb-36">
+  <div class="absolute inset-0 -z-3 bg-gray-800 h-1/2"></div>
   <div class="relative max-w-screen-lg lg:max-w-screen-xl mx-auto">
     <div class="container mx-auto flex flex-col lg:flex-row items-center">
       <div class="lg:w-1/2 mb-4 lg:mb-0 lg:mt-8">
@@ -16,7 +16,7 @@
           <img
             src="images/icon.png"
             alt="체화 Icon"
-            class="h-36 w-36 mt-24 lg:mt-0 lg:h-48 lg:w-48"
+            class="h-36 w-36 mt-24 lg:mt-0 lg:h-64 lg:w-64"
           />
           <div class="flex flex-col space-y-8 lg:ml-8">
             <h1 class="text-3xl xl:text-6xl font-semibold text-white">체화</h1>
@@ -177,7 +177,7 @@
         아래 메일로 문의 주시면 빠른 시일 내에 답변드리겠습니다.
       </p>
       <a
-        href="mailto:contact@chehwa.com"
+        href="mailto:chehwa62@gmail.com"
         class="inline-block px-6 py-12 md:px-36 md:py-18 lg:px-72 lg:py-36 boder-none border-soild md:border-2 border-gray-300"
       >
         <img
@@ -186,7 +186,7 @@
           class="h-24 w-24 mx-auto mb-4"
         />
         <span class="text-lg md:text-2xl text-blue-600 hover:underline"
-          >contact@chehwa.com</span
+          >chehwa62@gmail.com</span
         >
       </a>
     </div>
