change nav setting

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   </head>
   <body class="bg-gray-100">
     <nav
-      class="transition-all duration-500 bg-white shadow-md fixed w-full py-2 z-10"
+      class="transition-all duration-500 bg-white/[0.06] fixed w-full py-2 z-10"
     >
       <div
         class="container mx-auto px-6 py-1 flex justify-between items-center"
