--- a/en.html
+++ b/en.html
@@ -1,5 +1,4 @@
-<header id="home" class="pt-48 pb-36 bg-white">
-  <div class="absolute inset-0 -z-3 bg-gray-700 h-[60%]"></div>
+<header id="home" class="pt-48 pb-36 bg-white english">
   <div class="relative max-w-screen-lg lg:max-w-screen-xl mx-auto">
     <div class="container mx-auto flex flex-col lg:flex-row items-center">
       <div class="lg:w-1/2 mb-4 lg:mb-0 lg:mt-8">
@@ -16,14 +15,12 @@
           <img
             src="images/icon.png"
             alt="Chehwa Icon"
-            class="h-36 w-36 mt-24 lg:mt-0 lg:h-48 lg:w-48"
+            class="h-36 w-36 mt-24 lg:mt-0 lg:h-64 lg:w-64"
           />
           <div class="flex flex-col space-y-8 lg:ml-8">
-            <h1 class="text-3xl xl:text-6xl font-semibold text-white">
-              Chehwa
-            </h1>
+            <h1 class="text-3xl xl:text-6xl font-semibold">Chehwa</h1>
 
-            <p class="text-xl xl:text-3xl mx-4 lg:mx-0 text-white">
+            <p class="text-xl xl:text-3xl mx-4 lg:mx-0">
               Smart vocabulary app for efficient memorization through multiple
               reviews
             </p>
@@ -50,7 +47,7 @@
   </div>
 </header>
 
-<main>
+<main class="english">
   <section id="about" class="py-24 lg:py-48">
     <div
       class="max-w-screen-lg lg:max-w-screen-xl mx-auto px-4 md:px-6 lg:px-8"
@@ -175,7 +172,7 @@
   </section>
 </main>
 
-<section id="contact" class="py-24 lg:py-36 bg-gray-100">
+<section id="contact" class="py-24 lg:py-36 bg-gray-100 english">
   <div class="max-w-screen-lg lg:max-w-screen-xl mx-auto">
     <div class="container mx-auto px-6 text-center">
       <h2 class="text-3xl md:text-5xl font-semibold tracking-tighter mb-8">
