--- a/index.html
+++ b/index.html
@@ -12,10 +12,13 @@
         font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
           Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
           sans-serif;
-        font-size: 14px;
+        font-size: 12px;
         font-weight: 300;
         letter-spacing: -1.5px;
         scrollbar-width: smooth;
+      }
+      body .english {
+        letter-spacing: 0px;
       }
       .bold {
         font-weight: 500;
@@ -23,9 +26,12 @@
       .nav-font {
         font-family: Poppins, sans-serif;
       }
+      .background {
+        background-image: linear-gradient(to top, #a18cd1 0%, #fbc2eb 100%);
+      }
       @media screen and (min-width: 1024px) {
         body {
-          font-size: 16px;
+          font-size: 14px;
         }
       }
     </style>
