--- a/ko.html
+++ b/ko.html
@@ -1,5 +1,4 @@
 <header id="home" class="pt-48 pb-36">
-  <div class="absolute inset-0 -z-3 bg-[#304463]"></div>
   <div class="relative max-w-screen-lg lg:max-w-screen-xl mx-auto">
     <div class="container mx-auto flex flex-col lg:flex-row items-center">
       <div class="lg:w-1/2 mb-4 lg:mb-0 lg:mt-8">
@@ -19,9 +18,9 @@
             class="h-36 w-36 mt-24 lg:mt-0 lg:h-64 lg:w-64"
           />
           <div class="flex flex-col space-y-8 lg:ml-8">
-            <h1 class="text-3xl xl:text-6xl font-semibold text-white">체화</h1>
+            <h1 class="text-3xl xl:text-6xl font-semibold">체화</h1>
 
-            <p class="text-xl xl:text-3xl mx-4 lg:mx-0 text-white">
+            <p class="text-xl xl:text-3xl mx-4 lg:mx-0">
               다회독을 통해 효율적으로 암기하는 스마트 단어장
             </p>
           </div>
