--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 
     <footer class="bg-gray-800 text-white py-8">
       <div class="container mx-auto px-6 text-lg text-center tracking-wide">
-        <p>&copy; 2024 체화. All rights reserved.</p>
+        <p>&copy; 2024 Chehwa. All rights reserved.</p>
       </div>
     </footer>
 
