--- a/en.html
+++ b/en.html
@@ -48,7 +48,7 @@
 </header>
 
 <main class="english">
-  <section id="about" class="py-24 lg:py-48">
+  <section id="about" class="py-24 lg:py-48 bg-gray-700">
     <div
       class="max-w-screen-lg lg:max-w-screen-xl mx-auto px-4 md:px-6 lg:px-8"
     >
@@ -57,11 +57,11 @@
           class="flex flex-col justify-center items-center md:items-start space-y-16"
         >
           <h2
-            class="text-2xl md:text-3xl lg:text-4xl font-semibold tracking-tighter leading-tight"
+            class="text-2xl md:text-3xl lg:text-4xl text-white font-semibold tracking-tighter leading-tight"
           >
             Scientific Review Algorithm
           </h2>
-          <p class="text-base md:text-lg lg:text-xl text-gray-600 leading-10">
+          <p class="text-base md:text-lg lg:text-xl text-gray-300 leading-10">
             Learning cycles are set based on Ebbinghaus's forgetting curve
             theory.<br />After the initial learning, you review a chapter in the
             order of 6 hours, 12 hours, 1 day, 2 days, 4 days, 1 week, and 2
