--- a/ko.html
+++ b/ko.html
@@ -47,7 +47,7 @@
 </header>
 
 <main>
-  <section id="about" class="py-24 lg:py-48">
+  <section id="about" class="py-24 lg:py-48 bg-gray-700">
     <div
       class="max-w-screen-lg lg:max-w-screen-xl mx-auto px-4 md:px-6 lg:px-8"
     >
@@ -56,11 +56,11 @@
           class="flex flex-col justify-center items-center md:items-start space-y-16"
         >
           <h2
-            class="text-2xl md:text-3xl lg:text-4xl font-semibold tracking-tighter leading-tight"
+            class="text-2xl md:text-3xl lg:text-4xl text-white font-semibold tracking-tighter leading-tight"
           >
             과학적인 회독 알고리즘
           </h2>
-          <p class="text-base md:text-lg lg:text-xl text-gray-600 leading-10">
+          <p class="text-base md:text-lg lg:text-xl text-gray-300 leading-10">
             에빙하우스의 망각 곡선 이론을 바탕으로 학습 주기를 설정합니다.<br />최초
             학습 후 6시간, 12시간, 1일, 2일, 4일, 1주일, 2주일 순으로 한 챕터를
             회독하며 확실하게 장기 기억으로 변환시킵니다.
