--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <script src="https://unpkg.com/htmx.org@2.0.0"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <link
+      rel="icon"
+      href="./images/ic_launcher.png"
+      type="image/png"
+      sizes="32x32"
+    />
     <style>
       body {
         font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
