--- a/ko.html
+++ b/ko.html
@@ -61,9 +61,9 @@
             과학적인 회독 알고리즘
           </h2>
           <p class="text-base md:text-lg lg:text-xl text-gray-300 leading-10">
-            에빙하우스의 망각 곡선 이론을 바탕으로 학습 주기를 설정합니다.<br />최초
-            학습 후 6시간, 12시간, 1일, 2일, 4일, 1주일, 2주일 순으로 한 챕터를
-            회독하며 확실하게 장기 기억으로 변환시킵니다.
+            에빙하우스의 망각 곡선 이론을 바탕으로 효율적인 학습 주기를
+            설정합니다.<br />최초 학습 후 6시간, 12시간, 1일, 2일, 4일, 1주일,
+            2주일 순으로 한 챕터를 회독하며 확실하게 장기 기억으로 변환시킵니다.
           </p>
         </div>
         <div
