Fix: 전반적인 문구 수정, 이미지 변경

--- a/index.html
+++ b/index.html
@@ -20,8 +20,6 @@
           sans-serif;
         font-size: 12px;
         font-weight: 300;
-        letter-spacing: -1.5px;
-        scrollbar-width: smooth;
       }
       body .english {
         letter-spacing: 0px;
@@ -34,6 +32,20 @@
       }
       .background {
         background-image: linear-gradient(to top, #a18cd1 0%, #fbc2eb 100%);
+      }
+      p,
+      h1,
+      h2,
+      h3,
+      h4,
+      h5,
+      h6,
+      span,
+      a,
+      button {
+        word-break: keep-all;
+        letter-spacing: -0.05em;
+        scrollbar-width: smooth;
       }
       @media screen and (min-width: 1024px) {
         body {
