--- a/en.html
+++ b/en.html
@@ -1,4 +1,4 @@
-<header id="home" class="pt-48 pb-36 bg-white english">
+<header id="home" class="pt-48 pb-36">
   <div class="relative max-w-screen-lg lg:max-w-screen-xl mx-auto">
     <div class="container mx-auto flex flex-col lg:flex-row items-center">
       <div class="lg:w-1/2 mb-4 lg:mb-0 lg:mt-8">
@@ -18,11 +18,11 @@
             class="h-36 w-36 mt-24 lg:mt-0 lg:h-64 lg:w-64"
           />
           <div class="flex flex-col space-y-8 lg:ml-8">
-            <h1 class="text-3xl xl:text-6xl font-semibold">Chehwa</h1>
+            <h1 class="text-3xl xl:text-5xl font-semibold">Chehwa</h1>
 
-            <p class="text-xl xl:text-3xl mx-4 lg:mx-0">
-              Smart vocabulary app for efficient memorization through multiple
-              reviews
+            <p class="text-xl xl:text-2xl mx-4 lg:mx-0">
+              Imprint words into your memory.<br />
+              A smart vocabulary app for repetitive learning.
             </p>
           </div>
         </div>
@@ -47,7 +47,7 @@
   </div>
 </header>
 
-<main class="english">
+<main>
   <section id="about" class="py-24 lg:py-48 bg-gray-700">
     <div
       class="max-w-screen-lg lg:max-w-screen-xl mx-auto px-4 md:px-6 lg:px-8"
@@ -59,20 +59,20 @@
           <h2
             class="text-2xl md:text-3xl lg:text-4xl text-white font-semibold tracking-tighter leading-tight"
           >
-            Scientific Review Algorithm
+            Scientific Repetition Algorithm
           </h2>
           <p class="text-base md:text-lg lg:text-xl text-gray-300 leading-10">
-            Learning cycles are set based on Ebbinghaus's forgetting curve
-            theory.<br />After the initial learning, you review a chapter in the
-            order of 6 hours, 12 hours, 1 day, 2 days, 4 days, 1 week, and 2
-            weeks, ensuring it's converted into long-term memory.
+            Based on Ebbinghaus's forgetting curve theory, it sets efficient
+            learning cycles and provides a curriculum grounded in various
+            learning theories.<br /><br />By following each chapter, words are
+            repeatedly learned to help retain them in memory for a long time.
           </p>
         </div>
         <div
           id="chart-container"
           class="w-full h-96 flex justify-center items-center"
         >
-          <canvas id="forgettingCurve" class="w-full"></canvas>
+          <canvas id="forgettingCurve" w="2000" height="1200"></canvas>
         </div>
       </div>
     </div>
@@ -85,85 +85,54 @@
         >
           More Features
         </h2>
-        <div
-          class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 md:gap-16 lg:gap-24"
-        >
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-8 md:gap-16 lg:gap-24">
           <div class="text-center">
             <img
               src="svgs/wand-magic-sparkles.svg"
               alt="Feature 1"
-              class="h-16 w-16 mx-auto mb-6"
+              class="h-12 w-12 mx-auto mb-6"
             />
-            <h3 class="text-2xl font-semibold mb-2">
-              Expert-curated Vocabulary Lists
-            </h3>
+            <h3 class="text-xl font-semibold mb-2">Expert Vocabulary Lists</h3>
             <p class="text-xl text-gray-600">
-              We provide the best learning experience with word lists
-              recommended by professional instructors.
+              We offer carefully curated vocabulary lists<br />by reputable
+              English instructors and creators.
             </p>
           </div>
           <div class="text-center">
             <img
               src="svgs/mobile-screen.svg"
               alt="Feature 2"
-              class="h-16 w-16 mx-auto mb-6"
+              class="h-12 w-12 mx-auto mb-6"
             />
-            <h3 class="text-2xl font-semibold mb-2">
-              Easy Learning Experience
+            <h3 class="text-xl font-semibold mb-2">
+              Repetitive Learning Experience
             </h3>
             <p class="text-xl text-gray-600">
-              You can easily experience multiple reviews with a maximum of 5
-              repetitions when learning one part.
-            </p>
-          </div>
-          <div class="text-center">
-            <img
-              src="svgs/list.svg"
-              alt="Feature 3"
-              class="h-16 w-16 mx-auto mb-6"
-            />
-            <h3 class="text-2xl font-semibold mb-2">Customized Word Lists</h3>
-            <p class="text-xl text-gray-600">
-              We provide word lists tailored to the user's learning level based
-              on exams and difficulty.
-            </p>
-          </div>
-          <div class="text-center">
-            <img
-              src="svgs/circle-play.svg"
-              alt="Feature 3"
-              class="h-16 w-16 mx-auto mb-6"
-            />
-            <h3 class="text-2xl font-semibold mb-2">Rich Multimedia Content</h3>
-            <p class="text-xl text-gray-600">
-              With rich content such as pronunciations, example sentences, and
-              visual aids, you can understand and remember words more easily.
+              All words are reviewed up to 5 times<br />for natural repetition.
             </p>
           </div>
           <div class="text-center">
             <img
               src="svgs/person-arrow-up-from-line.svg"
               alt="Feature 3"
-              class="h-16 w-16 mx-auto mb-6"
+              class="h-12 w-12 mx-auto mb-6"
             />
-            <h3 class="text-2xl font-semibold mb-2">Improved Metacognition</h3>
+            <h3 class="text-xl font-semibold mb-2">Enhance Metacognition</h3>
             <p class="text-xl text-gray-600">
-              We assess with a simple test to distinguish words you know for
-              sure.
+              Simple tests help distinguish<br />words you know for sure.
             </p>
           </div>
           <div class="text-center">
             <img
               src="svgs/circle-arrow-down.svg"
               alt="Feature 3"
-              class="h-16 w-16 mx-auto mb-6"
+              class="h-12 w-12 mx-auto mb-6"
             />
-            <h3 class="text-2xl font-semibold mb-2">
-              Learning Result Analysis
+            <h3 class="text-xl font-semibold mb-2">
+              Learning Outcome Analysis
             </h3>
             <p class="text-xl text-gray-600">
-              We track learning results and provide detailed analysis. You can
-              monitor your learning results and adjust your learning direction.
+              Track your learning progress<br />and get detailed analysis.
             </p>
           </div>
         </div>
@@ -172,14 +141,15 @@
   </section>
 </main>
 
-<section id="contact" class="py-24 lg:py-36 bg-gray-100 english">
+<section id="contact" class="py-24 lg:py-36 bg-gray-100">
   <div class="max-w-screen-lg lg:max-w-screen-xl mx-auto">
     <div class="container mx-auto px-6 text-center">
       <h2 class="text-3xl md:text-5xl font-semibold tracking-tighter mb-8">
-        Contact Us
+        Contact
       </h2>
       <p class="text-xl md:text-2xl mb-24">
-        We will respond to your inquiry as soon as possible via the email below.
+        Please send your inquiries to the email below and we will get back to
+        you as soon as possible.
       </p>
       <a
         href="mailto:chehwa62@gmail.com"
