--- a/ko.html
+++ b/ko.html
@@ -18,10 +18,11 @@
             class="h-36 w-36 mt-24 lg:mt-0 lg:h-64 lg:w-64"
           />
           <div class="flex flex-col space-y-8 lg:ml-8">
-            <h1 class="text-3xl xl:text-6xl font-semibold">체화</h1>
+            <h1 class="text-3xl xl:text-5xl font-semibold">체화</h1>
 
-            <p class="text-xl xl:text-3xl mx-4 lg:mx-0">
-              다회독을 통해 효율적으로 암기하는 스마트 단어장
+            <p class="text-xl xl:text-2xl mx-4 lg:mx-0">
+              단어를 내 몸에 새긴다.<br />
+              다회독 학습 스마트 단어장 앱
             </p>
           </div>
         </div>
@@ -62,8 +63,9 @@
           </h2>
           <p class="text-base md:text-lg lg:text-xl text-gray-300 leading-10">
             에빙하우스의 망각 곡선 이론을 바탕으로 효율적인 학습 주기를
-            설정합니다.<br />최초 학습 후 6시간, 12시간, 1일, 2일, 4일, 1주일,
-            2주일 순으로 한 챕터를 회독하며 확실하게 장기 기억으로 변환시킵니다.
+            설정하며, 다양한 학습 이론을 토대로 한 커리큘럼을 학습합니다.<br /><br />각
+            챕터를 따라 단어를 반복적으로 학습하여 단어를 잊어버리지 않고
+            오랫동안 기억하도록 돕습니다.
           </p>
         </div>
         <div
@@ -83,81 +85,51 @@
         >
           More Features
         </h2>
-        <div
-          class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 md:gap-16 lg:gap-24"
-        >
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-8 md:gap-16 lg:gap-24">
           <div class="text-center">
             <img
               src="svgs/wand-magic-sparkles.svg"
               alt="Feature 1"
-              class="h-16 w-16 mx-auto mb-6"
+              class="h-12 w-12 mx-auto mb-6"
             />
-            <h3 class="text-2xl font-semibold mb-2">
-              전문가들이 선택한 단어장
-            </h3>
+            <h3 class="text-xl font-semibold mb-2">전문가들의 단어장</h3>
             <p class="text-xl text-gray-600">
-              전문 강사들이 추천한 단어 리스트로 최고의 학습 효과를 제공합니다.
+              공신력 있는 영어 강사, 크리에이터 분들이 엄선한<br />단어장을
+              제공합니다.
             </p>
           </div>
           <div class="text-center">
             <img
               src="svgs/mobile-screen.svg"
               alt="Feature 2"
-              class="h-16 w-16 mx-auto mb-6"
+              class="h-12 w-12 mx-auto mb-6"
             />
-            <h3 class="text-2xl font-semibold mb-2">손쉬운 학습 경험</h3>
+            <h3 class="text-xl font-semibold mb-2">회독 학습 경험</h3>
             <p class="text-xl text-gray-600">
-              한 파트를 학습할 때 최대 5회독으로 손쉽게 회독을 경험할 수
-              있습니다.
-            </p>
-          </div>
-          <div class="text-center">
-            <img
-              src="svgs/list.svg"
-              alt="Feature 3"
-              class="h-16 w-16 mx-auto mb-6"
-            />
-            <h3 class="text-2xl font-semibold mb-2">맞춤형 단어 리스트</h3>
-            <p class="text-xl text-gray-600">
-              시험과 난이도에 따라 사용자의 학습 수준에 맞는 단어 리스트를
-              제공합니다.
-            </p>
-          </div>
-          <div class="text-center">
-            <img
-              src="svgs/circle-play.svg"
-              alt="Feature 3"
-              class="h-16 w-16 mx-auto mb-6"
-            />
-            <h3 class="text-2xl font-semibold mb-2">
-              풍부한 멀티미디어 콘텐츠
-            </h3>
-            <p class="text-xl text-gray-600">
-              발음, 예문, 시각 자료 등 풍부한 콘텐츠로 단어를 더욱 쉽게 이해하고
-              기억할 수 있습니다.
+              모든 단어를 최대 5회독으로<br />자연스럽게 회독합니다.
             </p>
           </div>
           <div class="text-center">
             <img
               src="svgs/person-arrow-up-from-line.svg"
               alt="Feature 3"
-              class="h-16 w-16 mx-auto mb-6"
+              class="h-12 w-12 mx-auto mb-6"
             />
-            <h3 class="text-2xl font-semibold mb-2">메타인지 향상</h3>
+            <h3 class="text-xl font-semibold mb-2">메타인지 향상</h3>
             <p class="text-xl text-gray-600">
-              확실하게 아는 단어를 구분하기 위해 간단한 시험으로 평가합니다.
+              확실하게 아는 단어를 구분하기 위해<br />간단한 시험으로
+              평가합니다.
             </p>
           </div>
           <div class="text-center">
             <img
               src="svgs/circle-arrow-down.svg"
               alt="Feature 3"
-              class="h-16 w-16 mx-auto mb-6"
+              class="h-12 w-12 mx-auto mb-6"
             />
-            <h3 class="text-2xl font-semibold mb-2">학습 결과 분석</h3>
+            <h3 class="text-xl font-semibold mb-2">학습 결과 분석</h3>
             <p class="text-xl text-gray-600">
-              학습 결과를 추척하여 세부적인 분석을 제공합니다. 학습 결과를
-              모니터링하고 학습 방향을 조정할 수 있습니다.
+              학습 결과를 추척하여<br />세부적인 분석을 제공합니다.
             </p>
           </div>
         </div>
@@ -170,7 +142,7 @@
   <div class="max-w-screen-lg lg:max-w-screen-xl mx-auto">
     <div class="container mx-auto px-6 text-center">
       <h2 class="text-3xl md:text-5xl font-semibold tracking-tighter mb-8">
-        Contact Us
+        Contact
       </h2>
       <p class="text-xl md:text-2xl mb-24">
         아래 메일로 문의 주시면 빠른 시일 내에 답변드리겠습니다.
